Fixed ClientControllerTest and ClientServiceImplTest.